--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Tabulador</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -59,7 +59,6 @@
         <h3 class="pricing-title">Condiciones</h3>
         <!-- Lista de Caracteristicas / Propiedades -->
         <ul class="table-list">
-          <li><span>Manual de uso en PDF</span></li>
           <li>
             <span>
                 El sistema es propiedad de la empresa, mas no el codigo fuente.
