--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
           <li><span>Tiempo de entrega de entre uno o dos meses (Los modulos principales pueden estar listos en los primeros 15 dias)</span></li>
           <li>
             <span>
-                Luego del primer mes de pruebas, los requerimentos adicionales deben ser pagados, precio negociable. (El mes de pureba empieza una vez se hayan entregado los requerimentos acordados al principio)
+                Luego del primer mes de pruebas, los requerimentos adicionales deben ser pagados, precio negociable. (El mes de prueba empieza una vez se hayan entregado los requerimentos acordados al principio)
             </span>
           </li>
           <li><span>El pago del hosting y dominio lo costea la empresa, economicamente.</span></li>
-          <li><span>Los soportes tienen un consto adicional, negociable</span></li>
+          <li><span>Los soportes tienen un costo adicional, negociable</span></li>
         </ul>
       </div>
     </div>
